--- a/TestingIdentityApi/appsettings.json
+++ b/TestingIdentityApi/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "RedisConfig": {
+    "InstanceId": "d1f5d814229b7e426b563b7d8a8ca3f7c68635a6",
+    "Host": "127.0.0.1",
+    "Ip": "127.0.0.1",
+    "Password": "",
+    "Port": 6379
+  },
   "AllowedHosts": "*"
+
+
 }
