--- a/TestingIdentityApi/appsettings.json
+++ b/TestingIdentityApi/appsettings.json
@@ -13,6 +13,37 @@
     "Password": "",
     "Port": 6379
   },
+
+  "ConnectionStrings": {
+    "RedisConn": "127.0.0.1:6379"
+  },
+
+  "Authentication": {
+    "Google": {
+      "ClientId": "312224771411-6bdl5cnthod6hglbdtv5r4jpbnh0477m.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    },
+    "Facebook": {
+      "AppId": "",
+      "AppSecret": ""
+    },
+
+    "Microsoft": {
+      "clientId": "171bc807-00c0-4dc1-af87-af462a27c4f1",
+      "clientSecret": "XSC8Q~lQWoLkM7NbfLYifVym59QbZZuKdbdMhbzw"
+    },
+
+    "TikTok": {
+      "clientkey": "",
+      "clientSecret": ""
+    },
+
+    "Twitter": {
+      "consumerKey": "",
+      "consumerSecret":  ""
+    }
+  },
+
   "AllowedHosts": "*"
 
 
