--- a/TestingIdentityApi/appsettings.json
+++ b/TestingIdentityApi/appsettings.json
@@ -8,10 +8,10 @@
 
   "RedisConfig": {
     "InstanceId": "d1f5d814229b7e426b563b7d8a8ca3f7c68635a6",
-    "Host": "127.0.0.1",
+    "Host": "redis-16360.c251.east-us-mz.azure.cloud.redislabs.com",
     "Ip": "127.0.0.1",
-    "Password": "",
-    "Port": 6379
+    "Password": "vKd9XJqVeuNTH4MY4C0xfe2UjNQW3M91",
+    "Port": 16360
   },
 
   "ConnectionStrings": {
@@ -20,8 +20,8 @@
 
   "Authentication": {
     "Google": {
-      "ClientId": "312224771411-6bdl5cnthod6hglbdtv5r4jpbnh0477m.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientId": "286600713169-1frq8hfoq4hsl1qm760f9v17u1bvh9fe.apps.googleusercontent.com",
+      "ClientSecret": "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"
     },
     "Facebook": {
       "AppId": "",
