--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,13 @@ version: '3.4'
 services:
 
   redis:
-       image: redis:latest
-       ports:
-         - "6379:6379"
+    image: redis:latest
+    ports:
+      - "6379:6379"
 
   testingidentityapi:
     image: ${DOCKER_REGISTRY-}testingidentityapi
+    container_name: TestingIdentity
     depends_on:
         - redis
     build:
